fixed footer padding, and menu wrapping

--- a/style/style.css
+++ b/style/style.css
@@ -12,6 +12,10 @@ body {
 }
 /*730px por 510px hero image*/
 
+p{
+    max-width: 579px;
+}
+
 .container{
     margin-bottom: 80px;
 }
@@ -34,7 +38,7 @@ nav ul{
 
 nav ul li a{
     text-decoration: none;
-    margin: 1vw;
+    margin: 1vw 1vw 1vw 0;
     color: white;
 }
 
@@ -67,6 +71,7 @@ img{
 #about{
     height: 515px;
     display: flex;
+    flex-wrap: wrap;
 }
 
 .about-image{
@@ -79,6 +84,7 @@ img{
 .about-text{
     width: 50%;
     padding-left: 54px;
+    min-width: 354px;
 }
 
 
@@ -144,10 +150,22 @@ button{
 
 .menu-card{
     width: 30%;
+    min-width: 332px;
     margin-bottom: 62px;
 }
 
-.footer-links nav ul{
+.menu-card p{
+    max-width: 332px;
+}
+
+.footer-links{
+    display: flex;
+    justify-content: flex-start;
+    padding: 0;
+}
+
+.footer-header-links{
+    padding: 0;
     display: flex;
     justify-content: flex-start;
 }
